--- a/main.html
+++ b/main.html
@@ -8,6 +8,51 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name:</label>
+		<input type="text" id="name" placeholder="Name" required>
+		<br>
+		<br>
+		<label for="email">Email:</label>
+		<input type="email" id="email" placeholder="Email" required>
+		<br>
+		<br>
+		<label for="gender_m">M</label>
+		<input type="radio" id="gender_m" name="gender" required>
+		<label for="gender_f">F</label>
+		<input type="radio" id="gender_f" name="gender" required>
+		<br>
+		<br>
+		<label for="cars">Choose your car:</label>
+		<select id="cars" name="cars" required >
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		<br>
+		<label for="age">Age:</label>
+		<input type="number" id="age" required>
+		<br>
+		<br>
+		<label for="dob">Date of Birth:</label>
+		<input type="date" id="dob" required>
+		<br>
+		<br>
+		<label for="tel">Phone Number:</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxx">
+		<br>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<br>
+		<br>
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos" required>
+		<br>
+		<br>
+		<button type="submit">Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
